attempt at blueprint and worked on comments

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -8,22 +8,12 @@
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <!-- <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li> -->
-      <!-- {% if True %}
-      <a href="/login" class="text-info">Log In</a>
-      {% endif %} -->
+      {% if True %}
+      <a href="/login" class="text-warning">Log In</a>
+      {% endif %}
     </ul>
 
     <div class="pull-right d-flex align-items-center">
-      <a href="/charities" class="nav-link text-info">Charities</a>
       <a href="/blabs/new" class="nav-link btn btn-danger align-self-center mr-4">
         New Blab
       </a>
