--- a/templates/blab_show_one.html
+++ b/templates/blab_show_one.html
@@ -21,7 +21,26 @@
     </div>
 
     <div>
-      <h4>Comments:</h4>
+      <h4>Add a Comment:</h4>
+      <form action="/blabs/{{ blab._id }}/comments" method="POST" class="col-lg-6 d-flex flex-column justify-content-around" style="height: 100%">
+        <div class="d-flex flex-column ">
+          <textarea 
+            class="form-control" 
+            type="text" 
+            list='comment_content'
+            name="comment_content" 
+            required
+            autofocus
+          ></textarea> 
+        </div>
+        <div class="form-group align-self-end mt-3">
+          <button type="submit" class="btn btn-info ">Submit</button>
+        </div>
+      </form>
+
+      <h4>Comments</h4>
+      {% include 'partials/comments_show_for_loop.html' %}
+
     </div>
   </div>
 {% endblock %}
