--- a/templates/partials/comments_show_for_loop.html
+++ b/templates/partials/comments_show_for_loop.html
@@ -7,10 +7,16 @@
         <small>by Guest User</small>
       </div>
       <div class='d-flex flex-column align-items-end'>
-        <small>{{ comment.date.strftime("%m/%d/%Y %H:%M") }}</small>
-        <div>
-          <a href='/blabs/{{ blab._id }}/comments/{{ comment._id }}/edit' class="btn btn-warning">Edit</a>
-          <a href='/blabs/{{ blab._id }}/comments/{{ comment._id }}/delete' class="btn btn-danger">Delete</a>
+        <small class='d-flex text-right'>
+          Commented at: {{ comment.date.strftime("%m/%d/%Y %H:%M") }}
+          <br>
+          {% if comment.updated_date %}  
+            Updated at: {{comment.updated_date.strftime("%m/%d/%Y %H:%M")}}
+          {% endif %} 
+        </small>
+        <div class='mt-2'>
+          <a href='/blabs/{{ blab._id }}/comments/{{ comment._id }}/edit' class="btn btn-warning"><small>Edit</small></a>
+          <a href='/blabs/{{ blab._id }}/comments/{{ comment._id }}/delete' class="btn btn-danger"><small>Delete</small></a>
         </div>
       </div>
     </div>
