--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,15 +1,17 @@
 <!-- templates/partials/navbar.html -->
 
 <nav class="navbar navbar-expand-lg navbar-light navbar-default bg-info container-fluid">
-  <a class="navbar-brand text-black ml-3" href="/">Blabber</a>
+  <a class="navbar-brand text-white ml-3" href="/">Blabber</a>
   <button class="navbar-toggler bg-light " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      {% if True %}
-      <a href="/login" class="text-warning">Log In</a>
+      {% if False %}
+        <a href="/login" class="text-warning">Log In</a>
+      {% else %}
+        <a href="/logout" class="text-warning">Log Out</a>
       {% endif %}
     </ul>
 
