--- a/templates/all_blabs_index.html
+++ b/templates/all_blabs_index.html
@@ -4,6 +4,15 @@
   <div class="container">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mt-5">
       <div class="col-12">
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            {% for category, message in messages %}
+              <div class='alert alert-{{ category }}'>{{ message }}</div>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
+
         <h4>All Blabs</h4>
         <div class="row ">
           {% include 'partials/blabs_show_for_loop.html' %}
