--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Mali&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Mali:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
 
   <style>
     * {
       font-family: 'Mali', cursive;
+      font-weight: 700;
     }
 
     .overlay {
@@ -61,7 +62,7 @@
     </div>
   </footer>
   
- 
+
   <!-- We'll use jquery version 3.3.1 for this tutorial -->
  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
  <!-- We'll use popper.js version 1.14.7 for this tutorial -->
