--- a/templates/blab_show_one.html
+++ b/templates/blab_show_one.html
@@ -49,6 +49,13 @@
         </div>
       </form>
 
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            <div class='col-lg-6 alert alert-{{ category }}'>{{ message }}</div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
       <h4>Comments</h4>
       {% include 'partials/comments_show_for_loop.html' %}
 
