--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class='alert alert-{{ category }} fixed-top mt-5 text-center'>{{ message }}</div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
   <div class="container d-flex flex-column justify-content-center align-items-center" style="height: 90vh;">
     <h2 class="mb-4">Login</h2>
     <div class="card rounded bg-light p-3" style="width: 25rem; height: 22rem;">
       <form class="card-body d-flex flex-column justify-content-around" action="/login" method="POST">
         <div class="d-flex flex-column">
           <label for="email">Email:</label>
-          <input class="form-control" type="email" name="email" id="email" required>
+          <input class="form-control" type="email" name="email" id="email" required autofocus>
         </div>
         <div class="d-flex flex-column">
           <label for="password">Password:</label>
