--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -8,10 +8,10 @@
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      {% if False %}
-        <a href="/login" class="text-warning">Log In</a>
+      {% if not user_id %}
+        <a href="/login" class="text-warning">Log In {{ user_id }}</a>
       {% else %}
-        <a href="/logout" class="text-warning">Log Out</a>
+        <a href="/logout" class="text-warning">Log Out {{ user_id }} </a>
       {% endif %}
     </ul>
 
