more profile and user abilities

--- a/templates/blab_show_one.html
+++ b/templates/blab_show_one.html
@@ -3,10 +3,10 @@
 {% block content %}
   <div class="container mt-5 pt-4 pb-4">
 
-    <a href="/profile" class="d-flex mr-4">
+    <a href="/profile/{{ blab.user_id }}" class="d-flex mr-4">
       <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png" height='40' width='40' style="border-radius: 50px;">
       <div class="d-flex flex-column ml-2">
-        <span class='text-dark'>Guest User</span>
+        <span class='text-dark'>{{ blab.user_email }}</span>
       </div>
     </a>
     
